--- a/server/package.json
+++ b/server/package.json
@@ -5,23 +5,33 @@
   "license": "ISC",
   "author": "Omar Yasser",
   "main": "src/server.js",
+  "type": "module",
   "scripts": {
-    "test": "jest",
-    "dev": "nodemon src/server.js"
+    "test:cjs": "jest",
+    "test:esm": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "dev": "nodemon ./src/server.js"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^8.1.0",
+    "file-type": "^21.0.0",
+    "googleapis": "^160.0.0",
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.6",
+    "sharp": "^0.34.3",
+    "stripe": "^18.5.0",
+    "xss": "^1.0.15",
     "zod": "^4.1.5"
   },
   "devDependencies": {
