--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "motion": "^12.23.12",
+    "rc-slider": "^11.1.9",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
