--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "motion": "^12.23.12",
     "rc-slider": "^11.1.9",
     "react": "^19.1.1",
+    "react-day-picker": "^9.11.0",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.6.0",
